--- a/package.json
+++ b/package.json
@@ -1,48 +1,49 @@
 {
-  "name": "gatsby-personal-starter-blog",
+  "name": "personal-website",
   "private": true,
-  "description": "A personal blog starter for a blog powered by Netlify CMS, based on the default blog starter",
-  "version": "2.0.0",
-  "author": "Thomas Wang <thomas@wang.sh>",
+  "description": "Mike Kronk's personal blog - powered by Gatsby and Netlify CMS",
+  "version": "1.0.0",
+  "author": "Mike Kronk",
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/kronkm/personal-website/issues"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^1.5.1",
-    "@mdx-js/react": "^1.5.1",
-    "babel-plugin-styled-components": "^1.10.0",
-    "gatsby": "^2.24.47",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
+    "@reach/router": "^1.3.4",
+    "babel-plugin-styled-components": "^1.13.3",
+    "gatsby": "^3.14.5",
     "gatsby-image": "^2.0.39",
-    "gatsby-plugin-feed-mdx": "1.0.0",
-    "gatsby-plugin-google-analytics": "^2.0.18",
-    "gatsby-plugin-local-search": "^1.1.1",
-    "gatsby-plugin-manifest": "^2.0.29",
-    "gatsby-plugin-mdx": "^1.2.14",
-    "gatsby-plugin-netlify-cms": "^4.3.7",
-    "gatsby-plugin-offline": "^3.2.23",
-    "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-sharp": "^2.0.35",
-    "gatsby-plugin-styled-components": "^3.0.7",
-    "gatsby-plugin-typography": "^2.2.13",
-    "gatsby-remark-copy-linked-files": "^2.0.11",
-    "gatsby-remark-images": "^3.3.9",
-    "gatsby-remark-responsive-iframe": "^2.1.1",
-    "gatsby-remark-smartypants": "^2.0.9",
-    "gatsby-remark-vscode": "^2.1.2",
-    "gatsby-source-filesystem": "^2.0.29",
-    "gatsby-transformer-sharp": "^2.1.18",
+    "gatsby-plugin-feed-mdx": "^1.1.0",
+    "gatsby-plugin-google-analytics": "^3.0.0",
+    "gatsby-plugin-image": "^1.0.0",
+    "gatsby-plugin-local-search": "^2.0.1",
+    "gatsby-plugin-manifest": "^3.14.0",
+    "gatsby-plugin-mdx": "^2.0.0",
+    "gatsby-plugin-netlify-cms": "^5.0.0",
+    "gatsby-plugin-offline": "^4.0.0",
+    "gatsby-plugin-react-helmet": "^4.14.0",
+    "gatsby-plugin-sharp": "^3.0.1",
+    "gatsby-plugin-styled-components": "^4.0.0",
+    "gatsby-plugin-typography": "^3.0.0",
+    "gatsby-remark-copy-linked-files": "^4.0.0",
+    "gatsby-remark-images": "^5.0.0",
+    "gatsby-remark-responsive-iframe": "^4.0.0",
+    "gatsby-remark-smartypants": "^4.0.0",
+    "gatsby-source-filesystem": "^3.0.0",
+    "gatsby-transformer-sharp": "^3.0.0",
     "netlify-cms-app": "^2.9.1",
     "query-string": "^6.13.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.0",
+    "react-helmet": "^6.1.0",
     "react-switch": "^5.0.0",
-    "react-typography": "^0.16.19",
+    "react-typography": "^0.16.20",
     "react-use-flexsearch": "^0.1.1",
-    "styled-components": "^4.2.0",
-    "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.54",
-    "typography": "^0.16.19",
+    "styled-components": "^5.3.3",
+    "typeface-merriweather": "1.1.13",
+    "typeface-montserrat": "1.1.13",
+    "typography": "^0.16.21",
     "typography-theme-wordpress-2016": "^0.16.19"
   },
   "devDependencies": {
@@ -50,7 +51,6 @@
     "gatsby-plugin-root-import": "^2.0.5",
     "prettier": "^1.17.0"
   },
-  "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
     "gatsby"
   ],
@@ -58,13 +58,13 @@
   "main": "n/a",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gatsbyjs/gatsby-starter-blog.git"
+    "url": "git+https://github.com/kronkm/personal-website.git"
   },
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
-    "start": "npm run develop",
+    "start": "yarn develop",
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
   }
