--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,14 +1,13 @@
 backend:
   name: github
-  repo: thomaswang/gatsby-personal-starter-blog
+  repo: kronkm/personal-website
 
-media_folder: content/assets
-public_folder: ../assets
+media_folder: 'content/uploads'
 
 collections:
-  - name: blog
-    label: Blog
-    folder: content/blog
+  - name: 'blog'
+    label: 'Blog'
+    folder: 'content/posts'
     create: true
     fields:
       - { name: path, label: Path }
