--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -3,6 +3,7 @@ backend:
   repo: kronkm/personal-website
 
 media_folder: 'content/uploads'
+public_folder: ../uploads
 
 collections:
   - name: 'blog'
