--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: github
   repo: kronkm/personal-website
 
-media_folder: 'content/uploads'
+media_folder: content/uploads
 public_folder: ../uploads
 
 collections:
