clean out images, update config

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,18 +2,14 @@ backend:
   name: github
   repo: kronkm/personal-website
 
-media_folder: "content/uploads"
-public_folder: "/uploads"
+media_folder: static/img
+public_folder: /img
 
 collections:
   - name: 'blog'
     label: 'Blog'
     folder: 'content/posts'
     create: true
-    slug: 'index'
-    media_folder: ''
-    public_folder: ''
-    path: '{{title}}/index'
     fields:
       - { name: path, label: Path }
       - { name: date, label: Date, widget: date }
